# jupyterlab-desktop

./: README.md  README.zh.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yaml
src/: App.css  App.tsx  App1.tsx  api.ts  main.tsx  server.ts  styles.css  utils.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: command.rs  init.js  jupyter.rs  main.rs  tray.rs  utils.rs
