[package]
name = "jupyterlab-desktop"
version = "0.0.0"
description = "JupyterLab Desktop application, based on Tauri"
authors = ["lixnan@hotmail.com"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "api-all", "dialog", "devtools", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portpicker = "0.1.1"
rand = "0.8.5"
window-vibrancy = "0.3.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
